Open Mason: Cleanup of UI related files VII (Removed old "advanced mode" for properties panel.